--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <ul>
         <li>Capítulo 1: Introducción a Git</li>
         <li>Capítulo 2: Flujo de trabajo básico</li>
-        <li>Capítulo 3: Repositorios remotos</li>
+        <li>Capítulo 3: Gestión de Ramas</li>
+	<li>Capítulo 4: Repositorios remotos</li>
     </ul>
 </body>
 </html>
