Nueva referencia añadida

--- a/bibliography.html
+++ b/bibliography.html
@@ -6,8 +6,9 @@
     <title>Chapter 2</title>
 </head>
 <body>
-    <p>
-	Chacon, S. and Straub, B. Pro Git. Apress.
-    </p>
+    <ol>
+        <li>Scott Chacon and Ben Straub. Pro Git. Apress.</li>
+        <li>Ryan Hodson. Ry’s Git Tutorial. Smashwords (2014)</li>
+    </ol>
 </body>
 </html>
