Nueva referencia añadida

--- a/bibliography.html
+++ b/bibliography.html
@@ -6,8 +6,9 @@
     <title>Chapter 2</title>
 </head>
 <body>
-    <p>
-	Chacon, S. and Straub, B. Pro Git. Apress.
-    </p>
+    <ol>
+        <li>Chacon, S. and Straub, B. Pro Git. Apress.</li>
+        <li>Loeliger, J. and McCullough, M. Version control with Git. O’Reilly.</li>
+    </ol>
 </body>
 </html>
